--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 
+<!DOCTYPE html>
 <html>
 <head>
-<h>
-hello,wingloong
-</h>
+<meta charset="utf-8">
+<title>wingloong</title>
 </head>
 <body>
+    <h1>hello,html</h1>
+    <p>hello,world</p>
+</body>
+</html>
